final cleanup of benchmark to use `tinybench`

--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "@types/bluebird": "^3.5.42",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
-    "@typescript-eslint/eslint-plugin": "^8.46.3",
-    "@typescript-eslint/parser": "^8.46.3",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
     "@vitest/coverage-v8": "4.0.8",
-    "benchee": "^1.1.0",
     "bluebird": "^3.7.2",
     "cli-table2": "^0.2.0",
     "eslint": "^9.39.1",
@@ -41,8 +40,9 @@
     "react": "^19.2.0",
     "release-it": "^19.0.6",
     "rollup": "^4.53.2",
+    "tinybench": "^5.1.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.3",
+    "typescript-eslint": "^8.46.4",
     "underscore": "^1.13.7",
     "vite": "^7.2.2",
     "vitest": "^4.0.8"
