--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "url": "https://github.com/planttheidea/micro-memoize/issues"
   },
   "dependencies": {
-    "fast-equals": "^5.3.3-beta.1"
+    "fast-equals": "^5.3.3-beta.1",
+    "fast-stringify": "^4.0.0-beta.0"
   },
   "description": "A tiny, crazy fast memoization library for the 95% use-case",
   "devDependencies": {
@@ -21,6 +22,7 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.3.0",
     "@types/bluebird": "^3.5.42",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
@@ -31,6 +33,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
+    "fast-copy": "^4.0.0",
     "fast-memoize": "^2.5.2",
     "lodash": "^4.17.21",
     "lru-memoize": "^1.1.0",
