--- a/package.json
+++ b/package.json
@@ -132,5 +132,5 @@
   "sideEffects": false,
   "type": "module",
   "types": "./index.d.ts",
-  "version": "5.0.0-beta.17"
+  "version": "5.0.0-rc.0"
 }
