--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "tony.quetano@planttheidea.com",
-  "browser": "dist/micro-memoize.js",
+  "browser": "dist/umd/index.js",
   "browserslist": [
     "defaults",
     "Explorer >= 9",
@@ -12,51 +12,66 @@
   "bugs": {
     "url": "https://github.com/planttheidea/micro-memoize/issues"
   },
+  "dependencies": {
+    "fast-equals": "^5.3.3",
+    "fast-stringify": "^4.0.0"
+  },
   "description": "A tiny, crazy fast memoization library for the 95% use-case",
   "devDependencies": {
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.4",
+    "@planttheidea/build-tools": "^1.0.6",
+    "@rollup/plugin-typescript": "^12.3.0",
     "@types/bluebird": "^3.5.42",
-    "@types/jest": "^30.0.0",
-    "@types/react": "^19.1.13",
-    "@typescript-eslint/eslint-plugin": "^8.44.1",
-    "@typescript-eslint/parser": "^8.44.1",
-    "benchee": "^1.1.0",
-    "benchmark": "^2.1.4",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^24.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
+    "@vitest/coverage-v8": "^4.0.13",
     "bluebird": "^3.7.2",
     "cli-table2": "^0.2.0",
-    "eslint": "^9.36.0",
+    "eslint": "^9.39.1",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-webpack-plugin": "^5.0.2",
-    "fast-equals": "^5.3.2",
+    "fast-copy": "^4.0.0",
     "fast-memoize": "^2.5.2",
-    "html-webpack-plugin": "^5.6.4",
-    "in-publish": "^2.0.1",
-    "jest": "^30.1.3",
     "lodash": "^4.17.21",
     "lru-memoize": "^1.1.0",
     "mem": "^10.0.0",
     "memoizee": "^0.4.17",
     "memoizerific": "^1.11.3",
-    "mini-bench": "^1.0.0",
-    "ora": "^9.0.0",
-    "performance-now": "^2.1.0",
-    "ramda": "^0.31.3",
-    "react": "^19.1.1",
-    "release-it": "^19.0.5",
-    "rollup": "^4.52.2",
-    "rsvp": "^4.8.5",
-    "simple-statistics": "^7.8.8",
-    "ts-jest": "^29.4.4",
-    "ts-loader": "^9.5.4",
-    "tslib": "^2.8.1",
-    "typescript": "^5.9.2",
+    "prettier": "^3.6.2",
+    "ramda": "^0.32.0",
+    "release-it": "^19.0.6",
+    "rollup": "^4.53.3",
+    "tinybench": "^5.1.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.47.0",
     "underscore": "^1.13.7",
-    "webpack": "^5.101.3",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2"
+    "vite": "^7.2.4",
+    "vitest": "^4.0.13"
   },
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/es/index.d.mts",
+        "default": "./dist/es/index.mjs"
+      },
+      "require": {
+        "types": "./dist/cjs/index.d.cts",
+        "default": "./dist/cjs/index.cjs"
+      },
+      "default": {
+        "types": "./dist/umd/index.d.ts",
+        "default": "./dist/umd/index.js"
+      }
+    }
+  },
+  "files": [
+    "dist",
+    "CHANGELOG.md",
+    "index.d.ts",
+    "LICENSE",
+    "package.json",
+    "README.md"
+  ],
   "homepage": "https://github.com/planttheidea/micro-memoize#readme",
   "keywords": [
     "memoize",
@@ -74,35 +89,47 @@
     "expire"
   ],
   "license": "MIT",
-  "main": "dist/micro-memoize.cjs.js",
-  "module": "dist/micro-memoize.esm.js",
+  "main": "dist/cjs/index.cjs",
+  "module": "dist/es/index.mjs",
   "name": "micro-memoize",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/planttheidea/micro-memoize.git"
   },
   "scripts": {
-    "benchmark": "npm run dist && NODE_ENV=production node ./benchmarks/index.cjs",
-    "build": "npm run build:bundle && npm run build:mjs && npm run build:cjs",
-    "build:bundle": "NODE_ENV=production rollup -c config/rollup.config.js --bundleConfigAsCjs",
-    "build:cjs": "node scripts/create-cjs-import.js",
-    "build:mjs": "node scripts/create-mjs-import.js",
-    "clean": "rm -rf dist && rm -rf mjs",
-    "dev": "NODE_ENV=development webpack-dev-server --config=webpack/webpack.config.js",
+    "benchmark": "npm run clean:es && npm run build:esm && node benchmark/index.js",
+    "build": "npm run clean && npm run build:es && npm run build:es:types && npm run build:cjs && npm run build:cjs:types && npm run build:umd && npm run build:umd:types",
+    "build:cjs": "NODE_ENV=production rollup -c config/rollup/cjs.config.js",
+    "build:cjs:types": "tsc -p config/types/cjs.declaration.json && pti fix-types -t cjs",
+    "build:es": "NODE_ENV=production rollup -c config/rollup/es.config.js",
+    "build:es:types": "tsc -p config/types/es.declaration.json && pti fix-types -t es",
+    "build:min": "NODE_ENV=production rollup -c config/rollup/config.min.js && tsc -p config/tsconfig/min.declarations.json",
+    "build:umd": "NODE_ENV=production rollup -c config/rollup/umd.config.js",
+    "build:umd:types": "tsc -p config/types/umd.declaration.json",
+    "clean": "rm -rf dist",
+    "clean:cjs": "rm -rf dist/cjs",
+    "clean:es": "rm -rf dist/es",
+    "clean:min": "rm -rf dist/min",
+    "clean:umd": "rm -rf dist/umd",
+    "dev": "vite --config=config/vite.config.ts",
     "dist": "npm run clean && npm run build",
-    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint src/*.ts --max-warnings 0",
-    "lint:fix": "ESLINT_USE_FLAT_CONFIG=false npm run lint -- --fix",
-    "prepublish": "if in-publish; then npm run prepublish:compile; fi",
-    "prepublish:compile": "npm run typecheck && npm run lint && npm run test:coverage && npm run dist",
-    "release": "release-it",
-    "release:beta": "release-it --config=.release-it.beta.json",
+    "format": "prettier . --log-level=warn --write",
+    "format:check": "prettier . --log-level=warn --check",
+    "lint": "eslint --max-warnings=0",
+    "lint:fix": "npm run lint -- --fix",
+    "release:alpha": "release-it --config=config/release-it/alpha.json",
+    "release:beta": "release-it --config=config/release-it/beta.json",
+    "release:rc": "release-it --config=config/release-it/rc.json",
+    "release:scripts": "npm run format:check && npm run typecheck && npm run lint && npm run test && npm run build",
+    "release:stable": "release-it --config=config/release-it/stable.json",
     "start": "npm run dev",
-    "test": "NODE_PATH=. jest --config=config/jest.config.js",
+    "test": "vitest run --config=config/vitest.config.ts",
     "test:coverage": "npm run test -- --coverage",
-    "test:watch": "npm run test -- --watch",
+    "test:watch": "vitest --config=config/vitest.config.ts",
     "typecheck": "tsc --noEmit"
   },
   "sideEffects": false,
+  "type": "module",
   "types": "./index.d.ts",
-  "version": "4.2.0"
+  "version": "5.0.0-rc.0"
 }
