--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "verbatimModuleSyntax": true,
     "types": ["node"],
     "baseUrl": "src",
-    "outDir": "dist"
+    "outDir": "dist",
+    "rootDir": "./"
   },
   "exclude": ["**/node_modules/**", "dist/**/*"],
   "include": ["config/**/*.ts", "dev/**/*.ts", "src/**/*.ts", "__tests__/**/*.ts"]
